--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -853,8 +853,8 @@
 													
 													<form 
 														class=" mc4wp-form-theme mc4wp-form-theme-dark"
-														  action="https://formspree.io/f/meqbgbql"
-                                                          method="POST">
+														action="https://formspree.io/f/mvojrowb"
+														method="POST">
 														<div class="">
 															<p>
 																<label>Nombre y Apellido</label>
