--- a/en/contact/index.html
+++ b/en/contact/index.html
@@ -853,12 +853,12 @@
 													
 													<form 
 														class=" mc4wp-form-theme mc4wp-form-theme-dark"
-														action="https://formspree.io/f/mvojrowb"
-														method="POST">
+														action="https://formspree.io/f/meqbkqve"
+method="POST">
 														<div class="">
 															<p>
 																<label>Nombre y Apellido</label>
-																<input type="text" name="FNAME" required="">
+																<input type="text" name="Nombre y Apellido" required="">
 															</p>
 															<p>
 																<label>Email </label>
